<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/notes"
        android:title="@string/notes"
        android:enabled="true"
        android:icon="@drawable/ic_note"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/shop_list"
        android:title="@string/shop_list"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/new_item"
        android:title="@string/new_item"
        android:enabled="true"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom"/>

</menu>